manifests/99-apps/immich/immich-microservices.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-microservices
  namespace: nas
  labels:
    app: immich-microservices
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-microservices
  template:
    metadata:
      labels:
        app: immich-microservices
    spec:
      containers:
      - name: immich-microservices
        image: ghcr.io/immich-app/immich-server:v2.6.3
        command:
        - /bin/sh
        - ./start-microservices.sh
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
        volumeMounts:
        - name: library
          mountPath: /usr/src/app/upload
      volumes:
      - name: library
        persistentVolumeClaim:
          claimName: immich-library
